labguide/deploy.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "CloudLabs Environment - EC2 (Password Login) + S3 Bucket",

  "Parameters": {
    "CloudLabsDeploymentID": {
      "Type": "String"
    },
    "AdminUsername": {
      "Type": "String",
      "Default": "labuser"
    },
    "AdminPassword": {
      "Type": "String",
      "Default": "Password!234",
      "NoEcho": true
    }
  },

  "Resources": {

    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "vpc-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "subnet-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "igw-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },

    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "rtb-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "Route": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },

    "SubnetAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "Subnet" },
        "RouteTableId": { "Ref": "RouteTable" }
      }
    },

    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "GroupDescription": "Allow SSH Password Login",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "sg-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": "ami-0c02fb55956c7d316",
        "SubnetId": { "Ref": "Subnet" },
        "SecurityGroupIds": [
          { "Ref": "SecurityGroup" }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": "#!/bin/bash\nsudo useradd ${AdminUsername}\necho \"${AdminUsername}:${AdminPassword}\" | sudo chpasswd\nsudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config\nsudo service sshd restart || sudo service ssh restart"
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "lab-vm-${CloudLabsDeploymentID}" }
          }
        ]
      }
    },

    "LabS3Bucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketName": {
          "Fn::Sub": "lab-bucket-${CloudLabsDeploymentID}"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Sub": "lab-bucket-${CloudLabsDeploymentID}" }
          }
        ]
      }
    }

  },

  "Outputs": {
    "EC2PublicIP": {
      "Description": "EC2 Public IP",
      "Value": { "Fn::GetAtt": ["EC2Instance", "PublicIp"] }
    },
    "S3BucketName": {
      "Description": "S3 Bucket Name",
      "Value": { "Ref": "LabS3Bucket" }
    },
    "Username": {
      "Description": "Login Username",
      "Value": { "Ref": "AdminUsername" }
    }
  }
}
